Update email contact in index.html

--- a/index.html
+++ b/index.html
@@ -681,10 +681,10 @@
          <h3 class="cl-title">Conecta</h3>
          <ul class="cl-list">
             <li>
-              <a class="cl-link" href="mailto:eliagonzalezvaldepenas@gmail.com" data-kind="email" aria-label="Email: eliagonzalezvaldepenas@gmail.com">
+              <a class="cl-link" href="mailto:eliasgonzalezvaldepenas@gmail.com" data-kind="email" aria-label="Email: eliasgonzalezvaldepenas@gmail.com">
                 <span class="cl-icon" aria-hidden="true"><svg class="icon"><use href="#icon-mail"/></svg></span>
                 <span class="cl-label">Email</span>
-                <span class="cl-username">eliagonzalezvaldepenas@gmail.com</span>
+                <span class="cl-username">eliasgonzalezvaldepenas@gmail.com</span>
               </a>
             </li>
             <li>
