--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
         <img src="img/brand-icon.svg" width="38" height="38" alt="Logo E" class="brand-img me-2" />
         <span class="brand-text">Elías</span>
       </a>
+      <!-- Botón Descargar CV (visible en pantallas grandes) -->
+      <a
+        href="assets/cv/CV_Elias.pdf"
+        class="btn btn-sm btn-outline-dark ms-2 d-none d-lg-inline-flex cv-download"
+        download
+        aria-label="Descargar CV en PDF"
+        title="Descargar CV (PDF)"
+      >
+        Descargar CV
+      </a>
       <button 
         class="navbar-toggler" 
         type="button" 
@@ -89,6 +99,15 @@
           <li class="nav-item"><a class="nav-link" href="#projects">Proyectos</a></li>
           <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
+          <!-- Enlace Descargar CV (visible solo en móvil/tablet) -->
+          <li class="nav-item d-lg-none">
+            <a
+              class="nav-link"
+              href="assets/cv/CV_Elias.pdf"
+              download
+              aria-label="Descargar CV en PDF"
+            >Descargar CV (PDF)</a>
+          </li>
         </ul>
       </div>
     </div>
