cambio foto perfil

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <meta property="og:description" content="Desarrollo web, UI accesible, proyectos, skills y contacto." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://eliasgv04.github.io/" />
-  <meta property="og:image" content="https://eliasgv04.github.io/img/foto-perfil.jpeg" />
+  <meta property="og:image" content="https://eliasgv04.github.io/img/fotoPerfil.jpeg" />
   <meta property="og:locale" content="es_ES" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Portafolio de Elías González" />
   <meta name="twitter:description" content="Desarrollo web, UI accesible y proyectos." />
-  <meta name="twitter:image" content="https://eliasgv04.github.io/img/foto-perfil.jpeg" />
+  <meta name="twitter:image" content="https://eliasgv04.github.io/img/fotoPerfil.jpeg" />
 
   <!-- Preconnect optimización fuentes -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,7 +34,7 @@
     "name":"Elías González",
     "jobTitle":"Desarrollador Web",
   "url":"https://eliasgv04.github.io/",
-  "image":"https://eliasgv04.github.io/img/foto-perfil.jpeg",
+  "image":"https://eliasgv04.github.io/img/fotoPerfil.jpeg",
     "sameAs":[
       "https://github.com/eliasgv04",
       "https://www.linkedin.com/in/elias-gonzález-valdepeñas-98aa97170"
@@ -52,7 +52,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="img/brand-icon.svg" />
-  <link rel="apple-touch-icon" href="img/foto-perfil.jpeg" />
+  <link rel="apple-touch-icon" href="img/fotoPerfil.jpeg" />
   <meta name="theme-color" content="#ff2e63" />
 
   <!-- CSS personalizados -->
@@ -182,7 +182,7 @@
        <div class="about-photo-block">
          <figure class="about-photo-figure">
            <div class="about-photo-frame">
-             <img src="img/foto-perfil.jpeg" alt="Retrato de Elías González Valdepeñas" class="about-photo" loading="lazy" decoding="async" width="300" height="400" />
+             <img src="img/fotoPerfil.jpeg" alt="Retrato de Elías González Valdepeñas" class="about-photo" loading="lazy" decoding="async" width="300" height="400" />
              <span class="ap-accent" aria-hidden="true"></span>
            </div>
            <figcaption>Elías González</figcaption>
