--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </a>
       <!-- Botón Descargar CV (visible en pantallas grandes) -->
       <a
-        href="assets/cv/CV_Elias.pdf"
+        href="assets/cv/CVElias.pdf"
         class="btn btn-sm btn-outline-dark ms-2 d-none d-lg-inline-flex cv-download"
         download
         aria-label="Descargar CV en PDF"
@@ -103,7 +103,7 @@
           <li class="nav-item d-lg-none">
             <a
               class="nav-link"
-              href="assets/cv/CV_Elias.pdf"
+              href="assets/cv/CVElias.pdf"
               download
               aria-label="Descargar CV en PDF"
             >Descargar CV (PDF)</a>
