Nuevo proyecto añadido

--- a/index.html
+++ b/index.html
@@ -543,6 +543,28 @@
            <a href="https://github.com/eliasgv04/Juego-Pokemon" target="_blank" rel="noopener" class="proj-link big-icon is-action" title="Repositorio en GitHub: Juego estilo Pokémon"><svg class="icon inline" aria-hidden="true"><use href="#icon-github"/></svg><span>Código</span></a>
          </div>
        </article>
+         <!-- Proyecto 7 -->
+         <article class="project-card" role="listitem" data-cat="web tools" data-stack="Angular,Spring,MySQL,Spotify,Pagos" data-tone="indigo">
+           <div class="project-thumb" aria-hidden="true">
+             <div class="pt-overlay"></div>
+             <div class="pl-top">THIS IS</div>
+             <div class="pl-title">GRAMOLA VIRTUAL</div>
+             <div class="pl-bottom">
+               <div class="eq" aria-hidden="true"><span></span><span></span><span></span><span></span><span></span></div>
+               <div class="pl-meta">ANG • SPR • SQL</div>
+             </div>
+           </div>
+           <div class="project-body">
+             <h3 class="project-title">Gramola Virtual (Jukebox con Spotify)</h3>
+             <p class="project-desc">Servicio para bares donde los clientes eligen canciones que “se cuelan” en la playlist tras la actual. El propietario crea su cuenta, inicia sesión y gestiona el local; los clientes buscan temas vía API de Spotify y pagan un importe para insertarlos en la cola. Backend en Spring con gestión de cuentas, correo y pagos; base de datos MySQL para histórico y cola; front en Angular con vistas y servicios. Incluye pruebas funcionales con Selenium.</p>
+             <ul class="project-tags" aria-label="Tecnologías y funcionalidades">
+               <li>Angular</li><li>Spring</li><li>MySQL</li><li>Spotify API</li><li>Pagos</li><li>Selenium</li>
+             </ul>
+           </div>
+           <div class="project-actions">
+             <a href="https://github.com/eliasgv04/TrabajoTecnologiasEliasGlez" target="_blank" rel="noopener" class="proj-link big-icon is-action" title="Repositorio en GitHub: Gramola Virtual"><svg class="icon inline" aria-hidden="true"><use href="#icon-github"/></svg><span>Código</span></a>
+           </div>
+         </article>
      </div>
    </div>
  </section>
